# extension-scoring

./: CMakeLists.txt  README.md
src/: scoring.cpp  scoring.hpp  scoring.pro
